# planar-robotics-configurator

./: .gitignore  LICENSE  README.md  pyproject.toml
.config/algorithms/: a2c_config.yaml  algorithms.yaml  sac_config.yaml
config/: config.yaml
config/algorithms/: a2c_config.yaml  algorithms.yaml  sac_config.yaml
planar_robotics_configurator/: configurator.py
planar_robotics_configurator/model/: config.py  configurator_model.py
planar_robotics_configurator/model/algorithm/: algorithm.py  algorithm_configuration.py  parameter.py
planar_robotics_configurator/model/environment/: __init__.py  collision_shape.py  environment.py  mover.py  mover_preset.py  object.py  working_station.py
planar_robotics_configurator/model/simulation/: algorithm.py  parameter.py  simulation.py
planar_robotics_configurator/view/: __init__.py  configurator_app.py  navigation_component.py
planar_robotics_configurator/view/algorithm/: algorithm_information.py  component.py  configuration_selection.py  parameters.py  side_information.py
planar_robotics_configurator/view/environment/: component.py  draw_mode.py  environment_component.py  environment_map.py  environment_selection.py  environment_settings_dialog.py  environment_side_bar.py  map.py  selection.py  side_bar.py
planar_robotics_configurator/view/import_export/: component.py  export_container.py  import_container.py
planar_robotics_configurator/view/simulation/: algorithm_information.py  component.py  parameters.py  side_information.py  simulation_component.py  simulation_selection.py
(+26 files in other folders)
