[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "planar-robotics-configurator"
version = "0.1"
description = "A library for configure algorithms and enviroments for RL with planar robotics"
readme = "README.md"
authors = [{name = "Hannes Heitkämper genannt Höllmann", email = "hannes.heitkaemper@uni-bielefeld.de"}]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "hydra-core>=1.3.0",
    "kivy>=2.3.0",
    "kivymd>=1.1.1"
]